--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     Fore more details:
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
   -->
-  <base href="https://joms1122.github.io/myportfolio/">
+  <base href="https://carganillo.github.io/myportfolio/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -27,7 +27,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>web_portfolio</title>
+  <title>Joemar Carganillo - Portfolio</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
