--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     Fore more details:
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
   -->
-  <base href="https://carganillo.github.io/portfolio/">
+  <base href="https://joms1122.github.io/myportfolio/">
+  <!-- <base href="/"> -->
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -22,12 +23,13 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="web_portfolio">
+
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>Joemar Carganillo - Portfolio</title>
+  <title>Joms - Portfolio</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
@@ -41,7 +43,7 @@
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('flutter-first-frame', function () {
-        navigator.serviceWorker.register('flutter_service_worker.js?v=79674601');
+        navigator.serviceWorker.register('flutter_service_worker.js?v=1074034541');
       });
     }
   </script>
