--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     Fore more details:
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
   -->
-  <base href="https://joms1122.github.io/myportfolio/">
+  <base href="https://carganillo.github.io/portfolio/">
   <!-- <base href="/"> -->
 
   <meta charset="UTF-8">
